kubernetes/apps/rook-ceph/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gatus.home-operations.com/endpoint: |
      name: "Ceph Dashboard"
  name: rook-ceph-dashboard
  namespace: rook-ceph
spec:
  hostnames: ["ceph-dashboard.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: rook-ceph-mgr-dashboard
          namespace: rook-ceph
          port: 7000
      matches:
        - path:
            type: PathPrefix
            value: /
